# villama-omni

./: LICENSE  README.md  pyproject.toml
data/: data_gen.py  prompts.py
src/: settings.py
src/data/: data_gen.py  download.py  prompts.py
src/data/raw/: instruction_failed.json
