[tool.poetry]
name = "villama-omni"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.58.1"
transformers = "^4.47.1"
datasets = "^3.2.0"
loguru = "^0.7.3"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
